src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AACR_ID__c</fullName>
        <formula>Contact.AACR_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AACR ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Email_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to track email addresses that fail email validation.</description>
        <label>Bad Email Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORCID__c</fullName>
        <label>ORCID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shopping_Cart_ID__c</fullName>
        <label>FONTEVA SYSTEM FIELD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Federated_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Federated User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Profile_Cover_Image__c</fullName>
        <description>The secure (&quot;https://&quot;) url where the profile cover image file is located. We recommend uploaded a logo that has a width of 1100px and height of 300px.</description>
        <inlineHelpText>The secure (&quot;https://&quot;) url where the profile cover image file is located. We recommend uploaded a logo that has a width of 1100px and height of 300px.</inlineHelpText>
        <label>Profile Cover Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_for_Covid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field for Blue Sky to leverage for SSO integration (JAR)</inlineHelpText>
        <label>Registered for Covid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registered_for_Lymphoma__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field for Blue Sky to leverage for SSO integration (JAR)</inlineHelpText>
        <label>Registered for Lymphoma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSO_Email__c</fullName>
        <description>This email field will record that first email address assigned to the user. Subsequent changes will not update this field.</description>
        <inlineHelpText>**System Assigned** Do not modify</inlineHelpText>
        <label>SSO Email</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>AACR_Staff_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.COMPANY_NAME</field>
            <operation>equals</operation>
            <value>American Association for Cancer Research</value>
        </filters>
        <label>AACR Staff View</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users</label>
    </listViews>
    <listViews>
        <fullName>Integration_Profiles</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>API</value>
        </filters>
        <label>Integration Profiles</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_a_Portal_User_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Community Login User</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Not a Portal User View</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Todays</fullName>
        <columns>CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>